--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com</groupId>
-	<artifactId>geloka.api</artifactId>
+	<artifactId>smartnjangui.api</artifactId>
 	<version>1.0.0</version>
-	<name>Geloka API</name>
+	<name>Smart Njangui API</name>
 	<packaging>jar</packaging>
-	<description>Geloka API</description>
+	<description>Smart Njangui API</description>
 
 	<properties>
 		<java.version>1.8</java.version>
