--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.devtools.add-properties=false
-spring.application.name=Geloka - API
+spring.application.name=Smart Njangui - API
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/zenoye?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull
-spring.datasource.url=jdbc:postgresql://localhost:5432/geloka?zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:postgresql://localhost:5432/smartnjangui?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=koagne07
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.use-new-id-generator-mappings=false
@@ -27,4 +27,4 @@ server.address=localhost
 
 #Swagger configut=rations properties
 host.full.dns.auth.link=http://localhost:8080
-host.full.dns.auth.link=http://localhost:8080
+
